--- a/MoobWin32.vcxproj.filters
+++ b/MoobWin32.vcxproj.filters
@@ -8,6 +8,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="legacyCore">
+      <UniqueIdentifier>{8de98cab-93c3-4ced-9383-cd152189923f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -24,6 +27,69 @@
     </ClInclude>
     <ClInclude Include="freeImage\FreeImage.h">
       <Filter>Win32</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\EFCknl.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\EFCmain.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\EFCmda.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\EFCmem.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\EFCpixel.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\Inflater3.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\ABMReader.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\EFCfnt.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\EFCfs.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\EFCgrp.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\EFCimg.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\EFCkey.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\EXdefault.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\MCtypes.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\MCerror.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\EXtype.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\EFCthr.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\Comm.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\wipiexchange.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\wipiproc.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\ResourceManager.h">
+      <Filter>legacyCore</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -42,6 +108,51 @@
   <ItemGroup>
     <ClCompile Include="MoobWin32.cpp">
       <Filter>Win32</Filter>
+    </ClCompile>
+    <ClCompile Include="legacyCore\EFCknl.cpp">
+      <Filter>legacyCore</Filter>
+    </ClCompile>
+    <ClCompile Include="legacyCore\EFCmain.cpp">
+      <Filter>legacyCore</Filter>
+    </ClCompile>
+    <ClCompile Include="legacyCore\EFCmda.cpp">
+      <Filter>legacyCore</Filter>
+    </ClCompile>
+    <ClCompile Include="legacyCore\EFCmem.cpp">
+      <Filter>legacyCore</Filter>
+    </ClCompile>
+    <ClCompile Include="legacyCore\EFCpixel.cpp">
+      <Filter>legacyCore</Filter>
+    </ClCompile>
+    <ClCompile Include="legacyCore\Inflater3.cpp">
+      <Filter>legacyCore</Filter>
+    </ClCompile>
+    <ClCompile Include="legacyCore\ABMReader.cpp">
+      <Filter>legacyCore</Filter>
+    </ClCompile>
+    <ClCompile Include="legacyCore\EFCfnt.cpp">
+      <Filter>legacyCore</Filter>
+    </ClCompile>
+    <ClCompile Include="legacyCore\EFCfs.cpp">
+      <Filter>legacyCore</Filter>
+    </ClCompile>
+    <ClCompile Include="legacyCore\EFCgrp.cpp">
+      <Filter>legacyCore</Filter>
+    </ClCompile>
+    <ClCompile Include="legacyCore\EFCimg.cpp">
+      <Filter>legacyCore</Filter>
+    </ClCompile>
+    <ClCompile Include="legacyCore\EFCkey.cpp">
+      <Filter>legacyCore</Filter>
+    </ClCompile>
+    <ClCompile Include="legacyCore\EFCthr.cpp">
+      <Filter>legacyCore</Filter>
+    </ClCompile>
+    <ClCompile Include="legacyCore\Comm.cpp">
+      <Filter>legacyCore</Filter>
+    </ClCompile>
+    <ClCompile Include="legacyCore\ResourceManager.cpp">
+      <Filter>legacyCore</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
