[feat] 그래픽 버퍼 - 핸들 처리

--- a/MoobWin32.vcxproj
+++ b/MoobWin32.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="legacyCore\EFCthr.h" />
     <ClInclude Include="legacyCore\Inflater3.h" />
     <ClInclude Include="legacyCore\LegacyCore.h" />
+    <ClInclude Include="legacyCore\LegacyDrawer.h" />
     <ClInclude Include="legacyCore\LoopCore.h" />
     <ClInclude Include="legacyCore\ResourceManager.h" />
     <ClInclude Include="MoobWin32.h" />
@@ -176,10 +177,10 @@
     <ClCompile Include="legacyCore\EFCkey.cpp" />
     <ClCompile Include="legacyCore\EFCknl.cpp" />
     <ClCompile Include="legacyCore\EFCmain.cpp" />
-    <ClCompile Include="legacyCore\EFCmem.cpp" />
     <ClCompile Include="legacyCore\EFCpixel.cpp" />
     <ClCompile Include="legacyCore\EFCthr.cpp" />
     <ClCompile Include="legacyCore\Inflater3.cpp" />
+    <ClCompile Include="legacyCore\LegacyDrawer.cpp" />
     <ClCompile Include="legacyCore\LoopCore.cpp" />
     <ClCompile Include="legacyCore\ResourceManager.cpp" />
     <ClCompile Include="MoobWin32.cpp" />
