--- a/MoobWin32.vcxproj
+++ b/MoobWin32.vcxproj
@@ -122,7 +122,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>SKT_WIPI;_CRT_SECURE_NO_WARNINGS;_XKEYCHECK_H;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NATIVE_STAND_ALONE;SKT_WIPI;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -136,7 +136,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>SKT_WIPI;_CRT_SECURE_NO_WARNINGS;_XKEYCHECK_H;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NATIVE_STAND_ALONE;SKT_WIPI;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -150,8 +150,8 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="freeImage\FreeImage.h" />
     <ClInclude Include="legacyCore\ABMReader.h" />
+    <ClInclude Include="legacyCore\BinaryParser.h" />
     <ClInclude Include="legacyCore\EFCfnt.h" />
-    <ClInclude Include="legacyCore\EFCfs.h" />
     <ClInclude Include="legacyCore\EFCgrp.h" />
     <ClInclude Include="legacyCore\EFCimg.h" />
     <ClInclude Include="legacyCore\EFCkey.h" />
@@ -169,8 +169,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="legacyCore\ABMReader.cpp" />
+    <ClCompile Include="legacyCore\BinaryParser.cpp" />
     <ClCompile Include="legacyCore\EFCfnt.cpp" />
-    <ClCompile Include="legacyCore\EFCfs.cpp" />
     <ClCompile Include="legacyCore\EFCgrp.cpp" />
     <ClCompile Include="legacyCore\EFCimg.cpp" />
     <ClCompile Include="legacyCore\EFCkey.cpp" />
