--- a/MoobWin32.vcxproj.filters
+++ b/MoobWin32.vcxproj.filters
@@ -46,9 +46,6 @@
     <ClInclude Include="legacyCore\EFCfnt.h">
       <Filter>legacyCore</Filter>
     </ClInclude>
-    <ClInclude Include="legacyCore\EFCfs.h">
-      <Filter>legacyCore</Filter>
-    </ClInclude>
     <ClInclude Include="legacyCore\EFCgrp.h">
       <Filter>legacyCore</Filter>
     </ClInclude>
@@ -68,6 +65,9 @@
       <Filter>legacyCore</Filter>
     </ClInclude>
     <ClInclude Include="legacyCore\LegacyDrawer.h">
+      <Filter>legacyCore</Filter>
+    </ClInclude>
+    <ClInclude Include="legacyCore\BinaryParser.h">
       <Filter>legacyCore</Filter>
     </ClInclude>
   </ItemGroup>
@@ -106,9 +106,6 @@
     <ClCompile Include="legacyCore\EFCfnt.cpp">
       <Filter>legacyCore</Filter>
     </ClCompile>
-    <ClCompile Include="legacyCore\EFCfs.cpp">
-      <Filter>legacyCore</Filter>
-    </ClCompile>
     <ClCompile Include="legacyCore\EFCgrp.cpp">
       <Filter>legacyCore</Filter>
     </ClCompile>
@@ -125,6 +122,9 @@
       <Filter>legacyCore</Filter>
     </ClCompile>
     <ClCompile Include="legacyCore\LegacyDrawer.cpp">
+      <Filter>legacyCore</Filter>
+    </ClCompile>
+    <ClCompile Include="legacyCore\BinaryParser.cpp">
       <Filter>legacyCore</Filter>
     </ClCompile>
   </ItemGroup>
