[feat] 픽셀 필터 함수 기능 추가 - 포토샵 필터 같은 효과

--- a/MoobWin32.vcxproj
+++ b/MoobWin32.vcxproj
@@ -158,10 +158,10 @@
     <ClInclude Include="legacyCore\EFCimg.h" />
     <ClInclude Include="legacyCore\EFCkey.h" />
     <ClInclude Include="legacyCore\EFCmain.h" />
-    <ClInclude Include="legacyCore\EFCpixel.h" />
     <ClInclude Include="legacyCore\Inflater3.h" />
     <ClInclude Include="legacyCore\LegacyCore.h" />
     <ClInclude Include="legacyCore\LegacyDrawer.h" />
+    <ClInclude Include="legacyCore\LegacyFilterProcs.h" />
     <ClInclude Include="legacyCore\LoopCore.h" />
     <ClInclude Include="legacyCore\ResourceManager.h" />
     <ClInclude Include="MoobWin32.h" />
@@ -176,9 +176,9 @@
     <ClCompile Include="legacyCore\EFCimg.cpp" />
     <ClCompile Include="legacyCore\EFCkey.cpp" />
     <ClCompile Include="legacyCore\EFCmain.cpp" />
-    <ClCompile Include="legacyCore\EFCpixel.cpp" />
     <ClCompile Include="legacyCore\Inflater3.cpp" />
     <ClCompile Include="legacyCore\LegacyDrawer.cpp" />
+    <ClCompile Include="legacyCore\LegacyFilterProcs.cpp" />
     <ClCompile Include="legacyCore\LoopCore.cpp" />
     <ClCompile Include="legacyCore\ResourceManager.cpp" />
     <ClCompile Include="MoobWin32.cpp" />
